<resources>
    <string name="app_name">Weatharium</string>
    <string name="tw_header_text">Welcome to</string>
    <string name="tap_to_select">Select your city and behold Weatharium</string>
    <string name="btn_behold_weatharium">Behold weatharium</string>
    <string name="city_loaded">Last cty loaded</string>
    <string name="load_error">Load error</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="select_app">Select the aplication</string>
    <string name="chb_pressure">pressure</string>
    <string name="chb_wind">wind</string>
    <string name="chb_storm">something</string>
    <string name="tv_additional">Additional:</string>

    <string name="pressure_title">Pressure: </string>
    <string name="wind_title">Wind: </string>
    <string name="storm_title">Something else: </string>

    <string name="pressure_dim">mm Hg</string>
    <string name="wind_dim">m/s</string>
    <string name="something_dim">sss</string>
    <string name="menu_options">options</string>
    <string name="menu_clear">clear</string>

    <string name="menu_next">edit</string>
    <string name="menu_cancel">delete</string>
    <string name="select_additional_options">Select additional options</string>
    <string-array name="city_selection">
        <item>Moscow</item>
        <item>St. Petersburg</item>
        <item>London</item>
        <item>Paris</item>
        <item>Hong Kong</item>
    </string-array>
    <string-array name="temperature">
        <item>Temperature: +5</item>
        <item>Temperature: +8</item>
        <item>Temperature: +2</item>
        <item>Temperature: +6</item>
        <item>Temperature: +1</item>
    </string-array>
    <integer-array name="wind">
        <item>12</item>
        <item>2</item>
        <item>4</item>
        <item>3</item>
        <item>9</item>
    </integer-array>
    <integer-array name="pressure">
        <item>745</item>
        <item>721</item>
        <item>759</item>
        <item>761</item>
        <item>780</item>
    </integer-array>
    <integer-array name="something">
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
    </integer-array>
    <string-array name="addition_list">
        <item>Pressure</item>
        <item>Wind</item>
        <item>Something else</item>
    </string-array>
</resources>
