<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textview_tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/tap_to_select"
            android:textColor="@color/colorLogoText"
            android:textSize="@dimen/text_size_h2"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="@dimen/std_margin"
            android:layout_marginBottom="@dimen/std_margin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_additional" />

            <CheckBox
                android:id="@+id/chb_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_pressure" />

            <CheckBox
                android:id="@+id/chb_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_wind" />

            <CheckBox
                android:id="@+id/chb_storm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_storm" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>