<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/std_margin"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/lil_margin" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/std_margin"
                android:layout_marginLeft="@dimen/lil_margin"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_additional" />


                <CheckBox
                    android:id="@+id/chb_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chb_pressure" />

                <CheckBox
                    android:id="@+id/chb_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chb_wind" />

                <CheckBox
                    android:id="@+id/chb_something"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chb_storm" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
